fix: Close button width on mobile fullscreen

--- a/assets/src/css/bubble-skin.scss
+++ b/assets/src/css/bubble-skin.scss
@@ -271,6 +271,10 @@
 				height: 3em !important;
 			}
 
+			.vjs-custom-fullscreen-exit-control {
+				width: 3em !important;
+			}
+
 			.vjs-fullscreen-control {
 				right: 10px
 			}
